--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   ci:
@@ -16,19 +16,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Go v1.16.x
+      - name: Set up Go v1.20.x
         uses: actions/setup-go@v2
         with:
-          go-version: 1.16.x
-
-      - name: Set up Node.js v14.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 14.x
-          registry-url: https://npm.pkg.github.com/
+          go-version: 1.20.x
 
       - name: Install golangci
-        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.36.0
+        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.52.2
 
       - uses: actions/checkout@v2
 
@@ -39,19 +33,6 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
-
-      - name: Cache node modules
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: Install webapp dependencies
-        run: make webapp/node_modules
-        env:
-          TERM: dumb
 
       - name: check style
         run: make check-style
